syntax = "proto3";
package tbruyelle.nebula.sbt;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sbt/params.proto";
import "sbt/soul.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/tbruyelle/nebula/x/sbt/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tbruyelle/nebula/sbt/params";
  }
  // Queries a list of Souls items.
  rpc Souls(QuerySoulsRequest) returns (QuerySoulsResponse) {
    option (google.api.http).get = "/tbruyelle/nebula/sbt/souls/{creator}";
  }

  // Queries a list of Soulbounds items.
  rpc Soulbounds(QuerySoulBoundsRequest) returns (QuerySoulBoundsResponse) {
    option (google.api.http).get = "/tbruyelle/nebula/sbt/soulbounds/{owner}";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QuerySoulsRequest {
  string creator = 1;
  // Adding pagination to request
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QuerySoulsResponse {
  repeated Soul Soul = 1;
  // Adding pagination to response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QuerySoulBoundsRequest {
  string owner = 1;
  // Adding pagination to request
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QuerySoulBoundsResponse {
  repeated SoulBoundResponse SoulBound = 1;
  // Adding pagination to response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
message SoulBoundResponse {
  uint64 id = 1;
  uint64 soulID = 2;
  string name = 3;
  string description = 4;
  string owner = 5;
  int64 boundAt = 6;
  int64 createdAt = 7;
  string creator = 9;
};

// this line is used by starport scaffolding # 3
